base homepage mobile

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>COUNTRIES VIEWER</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,800" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,800" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-        <img src="design/mobile-design-home-dark.jpg" alt="" class="back-image">
+    <img src="design/mobile-design-home-dark.jpg" alt="" class="back-image">
     <nav>
         <div>
             <h1>Where in the World?</h1>
@@ -19,18 +22,42 @@
     </nav>
     <section class="search-options">
         <div class="search-box">
-                <i class="fas fa-search"></i>
-                <input type="text" name="" id="search-input" placeholder="Search for a country...">
+            <i class="fas fa-search"></i>
+            <input type="text" name="" id="search-input" placeholder="Search for a country...">
         </div>
 
-        <select name="cars" id="continent-select" placeholder="filter by region">
-                <option value="volvo">Africa</option>
-                <option value="saab">America</option>
-                <option value="fiat">Asia</option>
-                <option value="audi">Europe</option>
-                <option value="audi">Oceania</option>
-              </select> 
+        <div class="custom-select">
+            <p>Filter by Region</p>
+            <i class="fas fa-chevron-down"></i>
+            <ul class=custom-options>
+                <li>All</li>
+                <li>Africa</li>
+                <li>America</li>
+                <li>Asia</li>
+                <li>Europe</li>
+                <li>Oceania</li>
+            </ul>
+        </div>
+    </section>
+    <section class="country-list">
+        <div class="country-card">
+            <h1>Germany</h1>
+            <ul>
+                <li>Population: 81,000,000</li>
+                <li>Region: Europe</li>
+                <li>Capital: Berlin</li>
+            </ul>
+        </div>
+        <div class="country-card">
+                <h1>Germany</h1>
+                <ul>
+                    <li>Population: 81,000,000</li>
+                    <li>Region: Europe</li>
+                    <li>Capital: Berlin</li>
+                </ul>
+            </div>
     </section>
 
 </body>
+
 </html>
