--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <img src="design/mobile-design-home-dark.jpg" alt="" class="back-image">
+    <!-- <img src="design/mobile-design-detail-dark.jpg" alt="" class="back-image"> -->
     <nav>
         <div>
             <h1>Where in the World?</h1>
             <button><i class="fas fa-moon"></i> Dark Mode</button>
         </div>
     </nav>
-    <section class="search-options">
+    <!-- <section class="search-options">
         <div class="search-box">
             <i class="fas fa-search"></i>
             <input type="text" name="" id="search-input" placeholder="Search for a country...">
@@ -55,9 +55,41 @@
                     <li>Region: Europe</li>
                     <li>Capital: Berlin</li>
                 </ul>
-            </div>
-    </section>
 
+                </div>
+            </div>
+    </section> -->
+    <section class="country-detail-container">
+        <button class="mini-button return-button"><i class="fas fa-long-arrow-alt-left"></i> Back</button>
+        <div class="country-details">
+            <img src="https://restcountries.eu/data/col.svg" alt="">
+            <h2>Belgium</h2>
+            <div>
+            <ul>
+                <li><b>Native Name:</b> Belgie</li>
+                <li><b>Population:</b> 111002323</li>
+                <li><b>Region:</b> Europe</li>
+                <li><b>Subregion:</b> Western Europe</li>
+                <li><b>Capital:</b> Brussels</li>
+            </ul>
+
+            <ul>
+                <li><b>Top Level Domain:</b> .net</li>
+                <li><b>Currencies:</b> skdjn</li>
+                <li><b>Languages:</b> sssss,sssss,ssss</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Border Countries:</h3>
+            <div class="border-container">
+                <button class="mini-button">France</button>
+                <button class="mini-button">Germany</button>
+                <button class="mini-button">NetherLands</button>
+                <button class="mini-button">NetherLands</button>
+            </div>
+        </div>
+        </div>
+    </section>
 </body>
 
 </html>
