--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button><i class="fas fa-moon"></i> Dark Mode</button>
         </div>
     </nav>
-    <!-- <section class="search-options">
+    <section class="search-options">
         <div class="search-box">
             <i class="fas fa-search"></i>
             <input type="text" name="" id="search-input" placeholder="Search for a country...">
@@ -49,47 +49,96 @@
             </ul>
         </div>
         <div class="country-card">
-                <h1>Germany</h1>
-                <ul>
-                    <li>Population: 81,000,000</li>
-                    <li>Region: Europe</li>
-                    <li>Capital: Berlin</li>
-                </ul>
-
-                </div>
-            </div>
-    </section> -->
-    <section class="country-detail-container">
-        <button class="mini-button return-button"><i class="fas fa-long-arrow-alt-left"></i> Back</button>
-        <div class="country-details">
-            <img src="https://restcountries.eu/data/col.svg" alt="">
-            <h2>Belgium</h2>
-            <div>
+            <h1>Germany</h1>
             <ul>
-                <li><b>Native Name:</b> Belgie</li>
-                <li><b>Population:</b> 111002323</li>
-                <li><b>Region:</b> Europe</li>
-                <li><b>Subregion:</b> Western Europe</li>
-                <li><b>Capital:</b> Brussels</li>
+                <li>Population: 81,000,000</li>
+                <li>Region: Europe</li>
+                <li>Capital: Berlin</li>
             </ul>
 
-            <ul>
-                <li><b>Top Level Domain:</b> .net</li>
-                <li><b>Currencies:</b> skdjn</li>
-                <li><b>Languages:</b> sssss,sssss,ssss</li>
-            </ul>
         </div>
-        <div>
-            <h3>Border Countries:</h3>
-            <div class="border-container">
-                <button class="mini-button">France</button>
-                <button class="mini-button">Germany</button>
-                <button class="mini-button">NetherLands</button>
-                <button class="mini-button">NetherLands</button>
-            </div>
+        <div class="country-card">
+            <h1>Germany</h1>
+            <ul>
+                <li>Population: 81,000,000</li>
+                <li>Region: Europe</li>
+                <li>Capital: Berlin</li>
+            </ul>
+
+        </div>
+        <div class="country-card">
+            <h1>Germany</h1>
+            <ul>
+                <li>Population: 81,000,000</li>
+                <li>Region: Europe</li>
+                <li>Capital: Berlin</li>
+            </ul>
+
+        </div>
+        <div class="country-card">
+            <h1>Germany</h1>
+            <ul>
+                <li>Population: 81,000,000</li>
+                <li>Region: Europe</li>
+                <li>Capital: Berlin</li>
+            </ul>
+
+        </div>
+        <div class="country-card">
+            <h1>Germany</h1>
+            <ul>
+                <li>Population: 81,000,000</li>
+                <li>Region: Europe</li>
+                <li>Capital: Berlin</li>
+            </ul>
+
+        </div>
+        <div class="country-card">
+            <h1>Germany</h1>
+            <ul>
+                <li>Population: 81,000,000</li>
+                <li>Region: Europe</li>
+                <li>Capital: Berlin</li>
+            </ul>
+
         </div>
         </div>
     </section>
+    <!-- <section class="country-detail-container">
+        <button class="mini-button return-button"><i class="fas fa-long-arrow-alt-left"></i> Back</button>
+        <div class="country-details">
+            <img src="https://restcountries.eu/data/col.svg" alt="">
+
+            <div>
+                <h2>Belgium</h2>
+                <div class="info-container">
+                <ul>
+                    <li><b>Native Name:</b> Belgie</li>
+                    <li><b>Population:</b> 111002323</li>
+                    <li><b>Region:</b> Europe</li>
+                    <li><b>Subregion:</b> Western Europe</li>
+                    <li><b>Capital:</b> Brussels</li>
+                </ul>
+
+                <ul>
+                    <li><b>Top Level Domain:</b> .net</li>
+                    <li><b>Currencies:</b> skdjn</li>
+                    <li><b>Languages:</b> sssss,sssss,ssss</li>
+                </ul>
+            </div>
+                <div>
+                    <h3>Border Countries:</h3>
+                    <div class="border-container">
+                        <button class="mini-button">France</button>
+                        <button class="mini-button">Germany</button>
+                        <button class="mini-button">NetherLands</button>
+                        <button class="mini-button">NetherLands</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section> -->
 </body>
 
 </html>
